# band

./: .gitignore  Cargo.toml  Dockerfile  tsconfig.json
src/: main.rs  store.rs
static/: chat.js  style.css
templates/: chat.html  home.html
ts/: chat.ts
