[package]
name = "band"
version = "0.1.0"
authors = ["Adrian Sampson <adrian@radbox.org>"]
edition = "2018"

[dependencies]
tide = "0.16"
async-std = { version = "1.9", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
tide-tera = "0.2"
tera = "1.7"
broadcast-channel = "0.0"
