[package]
name = "band"
version = "0.1.0"
authors = ["Adrian Sampson <adrian@radbox.org>"]
edition = "2018"

[dependencies]
tide = "0.16"
async-std = { version = "1.9", features = ["attributes"] }
tide-tera = "0.2"
tera = "1.7"
broadcaster = "1.0"
futures-util = "0.3"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
harsh = "0.2"
bincode = "1.3"
rand = "0.8"
